hide sub header, better styles, elapsedTime func fixed, default collapsing comments

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -65,9 +65,10 @@
 	/* 02475e */
 }
 
-li:hover {
+/* is it even being used anywhere ? */
+/* li:hover {
 	text-decoration: 2px solid underline #333;
-}
+} */
 
 .content {
 	margin-left: 20px;
